# rust-linux-examples

./: .gitignore  Cargo.toml  README.md  config.yaml
concurrent_collections/: Cargo.toml
concurrent_collections/src/: main.rs  value.rs
concurrent_collections/src/chashmap_map/: receiver.rs  test.rs
concurrent_collections/src/dashmap/: mod.rs  producer.rs  receiver.rs  test.rs
concurrent_collections/src/dashmap_map/: mod.rs  test.rs
concurrent_collections/src/domain/: cycle.rs  event.rs  load.rs  mod.rs  test.rs  test_result.rs  value.rs
concurrent_collections/src/indexmap/: mod.rs  producer.rs  test.rs
concurrent_collections/src/indexmap_map/: producer.rs  receiver.rs  test.rs
concurrent_collections/src/papaya_map/: receiver.rs  test.rs
concurrent_collections/src/skiplist_map/: receiver.rs  test.rs
kanal_channel/: Cargo.toml
kanal_channel/src/: main.rs  mqueue.rs  producer.rs  receiver.rs
kanal_channel_encoded/: Cargo.toml  README.md
kanal_channel_encoded/src/: load.rs  main.rs  mqueue.rs  receiver.rs
log_macro/: Cargo.toml
log_macro/src/: dbg.rs  lib.rs  log_macro_input.rs  macro_input.rs
log_macro_use/: Cargo.toml
log_macro_use/src/: main.rs
math_cache/: Cargo.toml  README.md
math_cache/src/: cache.rs  field.rs  main.rs  pair.rs
math_cache/src/tests/: approx_eq.rs  cache_test.rs  mod.rs  test_teplate.rs
math_cache/src/tests/cache/: cache_sofia_test.rs  cache_test.rs  k_cache_test.rs  mod.rs
math_cache/src/tests/cache/data/: floating_position_cache_ark  floating_position_cache_sofia  floating_position_cache_test_ark  floating_position_cache_test_sofia
nested-struct/: Cargo.toml
nested-struct/src/: lib.rs
proc-macro/: Cargo.toml
proc-macro/src/nested_struct/: main.rs
queue/: Cargo.toml
queue/src/: async_event.rs  ds_point.rs  main.rs  main_shift.rs
queue/src/debug_session/: debug_session.rs
queue/src/refs/: mut_refs.rs
queue/src/traits/: bounds.rs  bounds_option.rs  drop_double.rs  iterators.rs  return_dyn_trait.rs  t_input.rs  trait_clone.rs
queue/src/traits/associated_items/: associated_types.rs
queue/src/traits/impl_trait/: impl_trait_as_return_iterator.rs
queue/src/traits/nested_fn_enum/: conf.rs  fn_inputs.rs  mod.rs  nested_fn.rs  t_in_out.rs
queue/src/traits/nested_fn_generic/: producer.rs  t_in_out.rs
queue/src/traits/phantom_type/: phantom_type.rs
simple-examples/: Cargo.toml
simple-examples/src/: async_event_queue.rs  main_queue.rs  main_udp.rs  tcp_server.rs  test_queue.rs
simple-examples/src/context/: add_field1.rs  example_01.rs
simple-examples/src/fft/: main.rs
simple-examples/src/multi_thread/: cyclic_service.rs  hard_load_service.rs  multi_thread  service_cycle.rs  test_data.rs
simple-examples/src/nested_value/: example_01.rs  parse_example.rs
simple-examples/src/refs/: mut_refs.rs
simple-examples/src/stream_speed/: multiqueue.rs  tokio_channel.rs
simple-examples/src/traits/: empty_bounds.rs  new_type_ideome.rs  super_traits.rs
simple-examples/src/traits/app_core/: mod.rs
simple-examples/src/traits/impl_trait/: impl_trait_as_return_closure.rs
simple-examples/src/traits/nested_fn_enum/: fn_metric.rs
simple-examples/src/traits/nested_fn_generic/: fn_inputs.rs  functions.rs
src/: async_event.rs  main.rs  main_.rs  main_async_fn.rs  main_u16_to_u8.rs  mod.rs_  tcp_server.rs  udp_server.rs
src/context/: add_field1.rs  calc_context.rs  calc_eval.rs  display_results.rs  display_src.rs  example_01.rs  mul2.rs  set_context.rs  task1_context.rs
src/fft/: fft_buf.rs  main.rs
src/future/: example_01.rs  future.rs
src/multi_thread/: cyclic_service.rs  main.rs  multi_thread  test_data.rs  test_data.txt
src/nested_struct/: main.rs
src/nested_value/: api_request_moc.rs  const_value.rs  dump-nested_value-202406112105.sql  example.rs  example_01.rs  example_02.rs  fetch_value.rs  multi_value.rs  mut_value.rs  nested_value.rs  value.rs
src/nested_value/obsolete/: const_value.rs  fetch_value.rs  nested_value.rs
src/refs/: mut_refs.rs
src/stream_speed/: mpsc_channel.rs
src/test_nested_fn/: nested_fn_channel.rs  nested_fn_multiqueue.rs  nested_sum.rs
src/test_nested_fn_enum/: nested_fn_enum.rs
src/traits/: drop_trait.rs  iterators.rs  mod.rs  multiple_bounds.rs  operator_overloading.rs  overlapping_traits.rs  return_dyn_trait.rs
src/traits/app_core/: bool.rs  point.rs
src/traits/associated_items/: associated_items.rs
src/traits/impl_trait/: impl_trait_as_argument_type.rs  impl_trait_as_return_type.rs
src/traits/nested_fn/: bool.rs  fn_inputs.rs  functions.rs  mod.rs  nested_fn.rs  nested_fn_channel.rs  nested_fn_multiqueue.rs  nested_sum.rs  point.rs  producer.rs  t_in_out.rs
src/traits/nested_fn_enum/: conf.rs  fn_inputs.rs  fn_metric.rs  functions.rs  mod.rs
src/traits/nested_fn_generic/: functions.rs  mod.rs  producer.rs
src/traits/phantom_type/: add_phantom.rs
std_channel/: Cargo.toml  README.md
std_channel/src/: event.rs  main.rs  mqueue.rs  producer.rs  receiver.rs  value.rs
strings/: Cargo.toml
strings/src/: main.rs
strings/src/concat_string_test/: test.rs
strings/src/concat_test/: test.rs
strings/src/domain/: mod.rs  test.rs  test_result.rs
tokio_channel/: Cargo.toml  README.md
tokio_channel/src/: main.rs  mqueue.rs  producer.rs  receiver.rs
tokio_channel/src/async_trait/: main.rs  main_.rs  request.rs
tokio_flume/: Cargo.toml  README.md
tokio_flume/src/: cycle.rs  load.rs  main.rs  mqueue.rs  producer.rs  receiver.rs
tokio_rt_std_channel/: Cargo.toml
tokio_rt_std_channel/src/: load.rs  main.rs  mqueue.rs  producer.rs  receiver.rs
tokio_std_channel/: Cargo.toml  README.md
tokio_std_channel/src/: load.rs  main.rs  mqueue.rs  producer.rs  receiver.rs
truck_3d/: Cargo.toml
truck_3d/src/: main_rs  section4_1.rs  section4_2.rs
