[workspace]
members = [
    "queue",
    "kanal_channel",
    "kanal_channel_encoded",
    "std_channel",
    "tokio_channel",
    "tokio_std_channel",
    "tokio_flume",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "^0.9"
serde_json = "^1.0"