[workspace]
workspace.resolver = "3"

members = [
    "queue",
    "kanal_channel",
    "kanal_channel_encoded",
    "log_macro",
    "log_macro_use",
    "std_channel",
    "tokio_channel",
    "tokio_std_channel",
    "tokio_flume",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
log = "0.4"
env_logger = "0.11"

serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "^0.9"
serde_json = "^1.0"
