[package]
name = "math_cache"
version = "0.1.0"
edition = "2024"

[dependencies]
log = { workspace = true }
env_logger = { workspace = true }
#
# Internal
testing = { workspace = true }
debugging = { workspace = true }
sal-core = { workspace = true }
#
# Serde
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
#
# Collections
indexmap = { workspace = true }

rand = "^0.9"

kanal = "0.1"

num = "^0.4"
