[package]
name = "tokio_channel"
version = "0.1.0"
edition = "2024"
default-run = "main"

[dependencies]
log = { workspace = true }
env_logger = { workspace = true }
#
serde = { workspace = true }
serde_yaml = { workspace = true }
#
# Async runtime
tokio = { version = "1.43", features = ["full"] }
#
# Collections
coco = "^0.3"
#
#
rand = "^0.9"


[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "async_trait"
path = "src/async_trait/main.rs"
