[package]
name = "tokio_flume"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
env_logger = "0.11"
#
serde = { workspace = true }
serde_yaml = { workspace = true }

tokio = { version = "1.43", features = ["full"] }
# flume = "^0.11"
flume = { version = "0.11", features = ["async", "select"] }
# flume = { version = "0.11", default-features = false, features = ["async", "select"] }

rand = "^0.9"
